# Vidixy

./: README.md  pyproject.toml
frontend/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx
nodes/: debug.py
vidixy/: __init__.py  __main__.py  application.py  nodes.py
